--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 language: python
-dist: bionic
 python:
-  - 3.6
-  - 3.7
-  - 3.8
-  - pypy3
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"      # current default Python on Travis CI
+  - "3.7"
+  - "3.8"
+  - "3.9"
+  - "3.9-dev"  # 3.9 development branch
+  - "nightly"  # nightly build
+# command to install dependencies
 install:
-  - pip install tox-travis
-  - pip install pytest-cov coveralls
-script: tox
-after_success: coveralls
+  - pip install -r requirements.txt
+# command to run tests
+script:
+  - pytest
